--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "react-bootstrap": "2.3.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.8.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "5.0.0",
     "react-spinners": "^0.11.0",
     "react-transition-group": "^2.7.0",
     "sass": "^1.50.1",
+    "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
