--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-avatar": "4.0.0",
     "react-bootstrap": "2.3.0",
     "react-dom": "^18.0.0",
+    "react-ga": "^3.3.1",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.8.2",
     "react-router-redux": "^5.0.0-alpha.9",
