--- a/src/App.json
+++ b/src/App.json
@@ -1,8 +1,8 @@
 {
     "name":"maya",
     "slogan":"your cloud assistance to your favourite apps",
-    "api":"https://deendevs.com/api/",
-    "authurl":"https://deendevs.com/auth?callback=https://deendevs.com/maya/auth/",
+    "api":"http://localhost:8000/api/",
+    "authurl":"http://localhost:7000/auth?callback=http://localhost:9000/maya/auth/",
     "token":"",
     "contacts":{
       "phone":"+234 906 529 1086",
