--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "homepage": "/maya",
   "dependencies": {
+    "@google-cloud/text-to-speech": "^4.2.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1333.0",
     "axios": "^0.26.1",
     "bootstrap": "5.1.3",
     "mdb-react-ui-kit": "3.0.0",
@@ -19,6 +21,8 @@
     "react-router-dom": "^6.8.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "5.0.0",
+    "react-speech-kit": "^3.0.1",
+    "react-speech-recognition": "^3.10.0",
     "react-spinners": "^0.11.0",
     "react-toastify": "^9.1.1",
     "react-transition-group": "^2.7.0",
