--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "aws-sdk": "^2.1333.0",
     "axios": "^0.26.1",
     "bootstrap": "5.1.3",
+    "fs": "^0.0.1-security",
+    "langdetect": "^0.2.1",
     "mdb-react-ui-kit": "3.0.0",
     "react": "^18.0.0",
     "react-avatar": "4.0.0",
